ClinicaVeterinaria/force-app/main/default/objects/Peluqueria__c/Peluqueria__c.object-meta.xml
<CustomObject>
    <label>Peluqueria</label>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Cita Peluqueria</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Peluqueria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>