ClinicaVeterinaria/force-app/main/default/objects/Peluqueria__c/fields/Tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Tratamiento__c</fullName>
    <label>Tratamiento</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antipulgas</fullName>
            </value>
            <value>
                <fullName>Pelo blanbo</fullName>
            </value>
            <value>
                <fullName>Pieles sensibles</fullName>
            </value>
            <value>
                <fullName>Colonia</fullName>
            </value>
            <value>
                <fullName>Encamación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>